--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -31,6 +31,11 @@
   --color-text: var(--ev-c-text-1);
 }
 
+:focus:not(:focus-visible) {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
 *,
 *::before,
 *::after {
